# csbindgen

./: Cargo.toml
csbindgen/: Cargo.toml
csbindgen-tests/: Cargo.toml
csbindgen-tests/src/: lz4.rs
csbindgen/src/: parser.rs
dotnet-sandbox/: lz4_bindgen.cs
