[package]
name = "csbindgen-tests"
version = "0.1.0"
edition.workspace = true
publish = false

# [[bin]]
# name = "csbindgen-test-app"
# path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
csbindgen = { path = "../csbindgen" }
bitflags = "2.10.0"
# physx-sys = "0.11.0"

[build-dependencies]
cc.workspace = true
bindgen.workspace = true
csbindgen.workspace = true
