[package]
name = "csbindgen"
version = "1.9.4"
edition.workspace = true
authors = ["Yoshifumi Kawai <ils@neue.cc>", "Cysharp, Inc."]
description = "Generate C# FFI from Rust for automatically brings native code and C native library to .NET and Unity."
keywords = ["bindings", "ffi", "code-generation", "csharp"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/Cysharp/csbindgen/"
repository = "https://github.com/Cysharp/csbindgen/"

[dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
regex.workspace = true
